# CMakeList.txt: proyecto de CMake para EDACup, incluya el origen y defina
# la lógica específica del proyecto aquí.
#
cmake_minimum_required (VERSION 3.8)

project ("EDACup")

# Agregue un origen al ejecutable de este proyecto.
add_executable (main "main.cpp")

# TODO: Agregue pruebas y destinos de instalación si es necesario.
